<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="25dp"
        android:background="#f57e1d"
        android:text="@string/textView1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:layout_gravity="start" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView2"
            android:textColor="#fff"
            android:padding="6dp"
            android:background="#f57e1d"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editText1"
            android:id="@+id/cost"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:ems="10"
            android:textColor="#ff808080"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:layout_gravity="start" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView3"
            android:textColor="#fff"
            android:padding="6dp"
            android:background="#f57e1d"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editText2"
            android:maxLines="1"
            android:id="@+id/content"
            android:ems="10"
            android:textColor="#ff808080"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        android:layout_gravity="start" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView4"
            android:textColor="#fff"
            android:padding="6dp"
            android:background="#f57e1d"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date"
            android:maxLines="1"
            android:hint="@string/editText3"
            android:textColor="#ff808080"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView5"
            android:textColor="#fff"
            android:padding="6dp"
            android:background="#f57e1d" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/spingarr"

            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:paddingTop="60dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:text="@string/button_confirm"
            android:textSize="20dp"
            android:background="#f57e1d"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/button_cancel"
            android:textSize="20dp"
            android:background="#f57e1d"
            />
    </LinearLayout>

</LinearLayout>